Added avg table and mediation for Qatar

--- a/Figures/med_table_qatar.html
+++ b/Figures/med_table_qatar.html
@@ -6,7 +6,7 @@
 </style>
   <body>
   
-  <h2>Mediation Effects</h2>
+  <h2>Qatar: Mediation Effects</h2>
   
   <table style="width:35%">
   <tr><th colspan="6" style = "border-bottom: 1px solid black"></th></tr>
@@ -22,70 +22,70 @@
   <tr>
     <th rowspan ="3">Controls</th> 
     <td >Reputation</td>
-    <td> -3.016 </td>
-    <td> -11.234 </td>
-    <td> -14.25 </td>
-    <td> 0.211  </td>
+    <td> -4.713 </td>
+    <td> -15.562 </td>
+    <td> -20.275 </td>
+    <td> 0.233  </td>
   </tr>
   <tr style="background-color: #D6EEEE">
     <td>Ambiguity</td>
-    <td> -4.317 </td>
-    <td> -9.667 </td>
-    <td> -13.984 </td>
-    <td> 0.309  </td>
+    <td> -12.325 </td>
+    <td> -7.853 </td>
+    <td> -20.178 </td>
+    <td> 0.612  </td>
   </tr>
   <tr>
     <td>Insulting</td>
-   <td> -1.765 </td>
-    <td> -12.345 </td>
-    <td> -14.11 </td>
-    <td> 0.125  </td>
+   <td> -1.842 </td>
+    <td> -17.83 </td>
+    <td> -19.671 </td>
+    <td> 0.094  </td>
   </tr>
   <tr><th colspan="6" style = "border-bottom: 1px solid black"></th></tr>
   <tr>
     <th rowspan ="3"> No Controls</th> 
     <td>Reputation</td>
-    <td> -4.419 </td>
-    <td> -10.409 </td>
-    <td> -14.828 </td>
-    <td> 0.291  </td>
+    <td> -6.888 </td>
+    <td> -15.036 </td>
+    <td> -21.924 </td>
+    <td> 0.315  </td>
   </tr>
   <tr style="background-color: #D6EEEE">
     <td>Ambiguity</td>
-    <td> -8.571 </td>
-    <td> -6.219 </td>
-    <td> -14.79 </td>
-    <td> 0.58  </td>
+    <td> -15.399 </td>
+    <td> -6.909 </td>
+    <td> -22.308 </td>
+    <td> 0.687  </td>
   </tr>
   <tr>
     <td>Insulting</td>
-   <td> -3.252 </td>
-    <td> -11.884 </td>
-    <td> -15.136 </td>
-    <td> 0.215  </td>
+   <td> -4.634 </td>
+    <td> -17.778 </td>
+    <td> -22.412 </td>
+    <td> 0.207  </td>
   </tr>
   <tr><th colspan="6" style = "border-bottom: 1px solid black"></th></tr>
   <tr>
     <th rowspan ="3">Demographic Controls</th> 
     <td>Reputation</td>
-    <td> -4.573 </td>
-    <td> -10.109 </td>
-    <td> -14.682 </td>
-    <td> 0.312  </td>
+    <td> -5.921 </td>
+    <td> -16.277 </td>
+    <td> -22.198 </td>
+    <td> 0.267  </td>
   </tr>
   <tr style="background-color: #D6EEEE">
     <td>Ambiguity</td>
-    <td> -8.898 </td>
-    <td> -6.283 </td>
-    <td> -15.181 </td>
-    <td> 0.586  </td>
+    <td> -10.307 </td>
+    <td> -8.286 </td>
+    <td> -18.593 </td>
+    <td> 0.556  </td>
   </tr>
   <tr>
     <td>Insulting</td>
-    <td> -2.733 </td>
-    <td> -11.977 </td>
-    <td> -14.71 </td>
-    <td> 0.186  </td>
+    <td> -2.443 </td>
+    <td> -18.535 </td>
+    <td> -20.978 </td>
+    <td> 0.116  </td>
   </tr>
   <tr><th colspan="6" style = "border-bottom: 1px solid black"></th></tr>
   </table>
