--- a/Figures/med_table_qatar.html
+++ b/Figures/med_table_qatar.html
@@ -20,72 +20,72 @@
   </tr>
   <tr><th colspan="6" style = "border-bottom: 1px solid black"></th></tr>
   <tr>
-    <th rowspan ="3">Controls</th> 
+    <th rowspan ="3"> Dispositional Controls</th> 
     <td >Reputation</td>
-    <td> -4.713 </td>
-    <td> -15.562 </td>
-    <td> -20.275 </td>
-    <td> 0.233  </td>
+    <td> -4.808 </td>
+    <td> -15.44 </td>
+    <td> -20.248 </td>
+    <td> 0.236  </td>
   </tr>
   <tr style="background-color: #D6EEEE">
     <td>Ambiguity</td>
-    <td> -12.325 </td>
-    <td> -7.853 </td>
-    <td> -20.178 </td>
-    <td> 0.612  </td>
+    <td> -12.099 </td>
+    <td> -8.091 </td>
+    <td> -20.191 </td>
+    <td> 0.603  </td>
   </tr>
   <tr>
     <td>Insulting</td>
-   <td> -1.842 </td>
-    <td> -17.83 </td>
-    <td> -19.671 </td>
-    <td> 0.094  </td>
+   <td> -2.621 </td>
+    <td> -17.819 </td>
+    <td> -20.44 </td>
+    <td> 0.128  </td>
   </tr>
   <tr><th colspan="6" style = "border-bottom: 1px solid black"></th></tr>
   <tr>
     <th rowspan ="3"> No Controls</th> 
     <td>Reputation</td>
-    <td> -6.888 </td>
-    <td> -15.036 </td>
-    <td> -21.924 </td>
-    <td> 0.315  </td>
+    <td> -6.961 </td>
+    <td> -15.307 </td>
+    <td> -22.268 </td>
+    <td> 0.307  </td>
   </tr>
   <tr style="background-color: #D6EEEE">
     <td>Ambiguity</td>
-    <td> -15.399 </td>
-    <td> -6.909 </td>
-    <td> -22.308 </td>
-    <td> 0.687  </td>
+    <td> -15.432 </td>
+    <td> -6.576 </td>
+    <td> -22.008 </td>
+    <td> 0.696  </td>
   </tr>
   <tr>
     <td>Insulting</td>
-   <td> -4.634 </td>
+   <td> -3.415 </td>
     <td> -17.778 </td>
-    <td> -22.412 </td>
-    <td> 0.207  </td>
+    <td> -21.193 </td>
+    <td> 0.161  </td>
   </tr>
   <tr><th colspan="6" style = "border-bottom: 1px solid black"></th></tr>
   <tr>
     <th rowspan ="3">Demographic Controls</th> 
     <td>Reputation</td>
-    <td> -5.921 </td>
-    <td> -16.277 </td>
-    <td> -22.198 </td>
-    <td> 0.267  </td>
+    <td> -5.773 </td>
+    <td> -16.161 </td>
+    <td> -21.934 </td>
+    <td> 0.261  </td>
   </tr>
   <tr style="background-color: #D6EEEE">
     <td>Ambiguity</td>
-    <td> -10.307 </td>
-    <td> -8.286 </td>
-    <td> -18.593 </td>
-    <td> 0.556  </td>
+    <td> -10.172 </td>
+    <td> -8.702 </td>
+    <td> -18.874 </td>
+    <td> 0.539  </td>
   </tr>
   <tr>
     <td>Insulting</td>
-    <td> -2.443 </td>
+    <td> -3.623 </td>
     <td> -18.535 </td>
-    <td> -20.978 </td>
-    <td> 0.116  </td>
+    <td> -22.158 </td>
+    <td> 0.163  </td>
   </tr>
   <tr><th colspan="6" style = "border-bottom: 1px solid black"></th></tr>
   </table>
