Changed diplomacy to condemn in barplots

--- a/Figures/Iran_Sum.html
+++ b/Figures/Iran_Sum.html
@@ -1,5 +1,5 @@
 
-<table style="text-align:center; width: 25%"><tr><td colspan="7" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Statistic</td><td>N</td><td>Mean</td><td>Median</td><td>St. Dev.</td><td>Min</td><td>Max</td></tr>
+<table style="text-align:center"><tr><td colspan="7" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Statistic</td><td>N</td><td>Mean</td><td>Median</td><td>St. Dev.</td><td>Min</td><td>Max</td></tr>
 <tr><td colspan="7" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Escalation Preference</td><td>946</td><td>55.05</td><td>56.36</td><td>23.80</td><td>0.00</td><td>100.00</td></tr>
 <tr><td style="text-align:left">Denial</td><td>954</td><td>0.50</td><td>1</td><td>0.50</td><td>0</td><td>1</td></tr>
 <tr><td style="text-align:left">Reputation</td><td>949</td><td>52.89</td><td>50.64</td><td>28.17</td><td>0.00</td><td>100.00</td></tr>
