--- a/Figures/Qatar_Sum.html
+++ b/Figures/Qatar_Sum.html
@@ -1,5 +1,5 @@
 
-<table style="text-align:center; width: 25%"><tr><td colspan="7" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Statistic</td><td>N</td><td>Mean</td><td>Median</td><td>St. Dev.</td><td>Min</td><td>Max</td></tr>
+<table style="text-align:center"><tr><td colspan="7" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Statistic</td><td>N</td><td>Mean</td><td>Median</td><td>St. Dev.</td><td>Min</td><td>Max</td></tr>
 <tr><td colspan="7" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Escalation Preference</td><td>473</td><td>53.07</td><td>51.13</td><td>26.01</td><td>0.00</td><td>100.00</td></tr>
 <tr><td style="text-align:left">Denial</td><td>477</td><td>0.49</td><td>0</td><td>0.50</td><td>0</td><td>1</td></tr>
 <tr><td style="text-align:left">Reputation</td><td>475</td><td>53.74</td><td>50.64</td><td>29.10</td><td>0.00</td><td>100.00</td></tr>
